# batch-explorer

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml
.github/workflows/: build.yml  cd.yaml
api/: .env  .gitignore  Cargo.toml
api/database/src/: db.rs
api/entity/: Cargo.toml
api/entity/src/: block.rs  checkpoint.rs
api/fullnode-client/: fetcher.rs
api/migration/: Cargo.toml
api/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20241224_144707_seed.rs  m20241226_042219_seed1.rs  m20241226_100451_create_blocks_table.rs  m20241227_132019_add_txid_and_status.rs
api/service/: Cargo.toml
api/service/src/: db.rs  lib.rs
api/src/: db.rs  fetcher.rs  helper.rs  main-working_with_react.rs  main.rs  models.rs  routes.rs
api/src/cache/: lib.rs
api/src/static/: scripts.js  styles.css
api/src/templates/: base.html  checkpoint.html  homepage.html  navbar.html  pagination.html  search.html
api/src/templates/mobile/: menu-button.html
api/static/: styles.css
api/templates/: base.html  checkpoint.html  homepage.html  navbar.html  search.html
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
backend/database/: Cargo.toml
backend/database/src/: connection.rs  lib.rs
backend/database/src/services/: block_service.rs  checkpoint_service.rs  pagination.rs  utils.rs
backend/fullnode-client/: Cargo.toml  fetcher.rs
backend/migration/src/: lib.rs  (+2 more)
backend/model/: Cargo.toml
backend/static/: scripts.js  styles.css
backend/templates/: base.html  homepage.html  navbar.html  search.html
database/: Cargo.toml
database/src/: connection.rs  db.rs
entity/src/: block.rs  checkpoint.rs  pgu64.rs
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: config.json
frontend/src/: App.module.css  App.tsx  index.css  main.tsx
fullnode-client/: Cargo.toml  checkpoint_fetcher.rs  lib.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20241224_144707_seed.rs  m20241226_042219_seed1.rs  m20241226_100451_create_blocks_table.rs  m20241227_000001_drop_unique_l2_blockid_checkpoint_table.rs  m20241227_132019_add_txid_and_status.rs
static/: styles.css
templates/: base.html  checkpoint.html  homepage.html  navbar.html  pagination.html  search.html
(+34 files in other folders)
