[package]
name = "batch-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.6"
tokio = { version = "1", features = ["full"] }
rocksdb = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] } # HTTP client
tracing = "0.1"
tracing-subscriber = "0.3"
num-bigint = "0.4"
rand = "0.8"
