[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity.workspace = true
migration.workspace = true
tracing.workspace = true
sea-orm.workspace = true
serde.workspace = true

[dev-dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt"] }
