[package]
name = "database"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model.workspace = true
migration.workspace = true
tracing.workspace = true
sea-orm.workspace = true
serde.workspace = true
hex.workspace = true

[dev-dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt"] }
